<package>
  <name>hector_driving_aid_markers</name>
  <version>1.0.0</version>
  <description>hector_driving_aid_markers</description>
  <maintainer email="test@test.edu">kohlbrecher</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/hector_driving_aid_markers</url>
  <!-- <url type="bugtracker"></url> -->

  <author>kohlbrecher</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>visualization_msgs</build_depend>
  <build_depend>roscpp</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>visualization_msgs</run_depend>
  <run_depend>roscpp</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>visualization_msgs</test_depend> -->
  <!-- <test_depend>roscpp</test_depend> -->

</package>
