<package>
  <name>hector_exploration_node</name>
  <version>1.0.0</version>
  <description>hector_exploration_node is a node that provides exploration plans via a service server</description>
  <maintainer email="test@test.edu">Stefan Kohlbrecher</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/hector_exploration_node</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Stefan Kohlbrecher</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>hector_exploration_planner</build_depend>
  <build_depend>hector_elevation_msgs</build_depend>
  <build_depend>hector_nav_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>hector_exploration_planner</run_depend>
  <run_depend>hector_elevation_msgs</run_depend>
  <run_depend>hector_nav_msgs</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>hector_exploration_planner</test_depend> -->
  <!-- <test_depend>hector_nav_msgs</test_depend> -->

</package>
